@@ -1,5 +1,110 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addons>
+<addon id="plugin.playitx" name="PlayIt" version="0.0.2"
+	provider-name="AJ">
+	<requires>
+		<import addon="xbmc.python" version="2.1.0" />
+		<import addon="script.module.turtlex" />
+	</requires>
+	<extension point="xbmc.python.pluginsource" library="TurtleMain.py">
+		<provides>audio</provides>
+	</extension>
+	<extension point="xbmc.addon.metadata">
+		<summary>Play the video received from PlayIt service clients like Web Browser extensions</summary>
+		<description>PlayIt is capable of playing almost all type of videos from most of hosted video sources.</description>
+		<disclaimer>This addon makes no warranties, expressed or implied, and
+			hereby disclaims and negates all other warranties, including without
+			limitation, implied warranties or conditions of merchantability,
+			fitness for a particular purpose, or non-infringement of intellectual
+			property or other violation of rights. Further, PlayIt addon does not
+			warrant or make any representations concerning the accuracy, likely
+			results, or reliability of the use of the materials on the Internet
+			web site where from data is retrieved or otherwise relating to such
+			materials or on any sites linked to this addon. Videos are soruced
+			from video-hosting websites that are having full rights to remove
+			such access to video if required.</disclaimer>
+		<license>GNU GPL v3</license>
+		<platform>all</platform>
+	</extension>
+</addon>
+
+<addon id="plugin.video.filmibynaturex" name="Filmi BY NATURE"
+	version="2.4.7" provider-name="AJ">
+	<requires>
+		<import addon="xbmc.python" version="2.0" />
+		<import addon="script.module.simplejson" version="2.0.10" />
+		<import addon="script.module.beautifulsoup" version="3.2.0" />
+		<import addon="script.module.turtlex"  version="1.7.2" />
+		<import addon="script.module.metahandler" />
+		<import addon="script.module.requests" />
+	</requires>
+	<extension point="xbmc.python.pluginsource" library="TurtleMain.py">
+		<provides>video</provides>
+	</extension>
+	<extension point="xbmc.addon.metadata">
+		<summary>Watch Indian videos as seen on sominaltvfilms.com</summary>
+		<description>Watch videos as seen on sominaltvfilms.com</description>
+		<disclaimer>This addon makes no warranties, expressed or implied, and
+			hereby disclaims and negates all other warranties, including without
+			limitation, implied warranties or conditions of merchantability,
+			fitness for a particular purpose, or non-infringement of intellectual
+			property or other violation of rights. Further, FILMI by NATURE addon
+			does not warrant or make any representations concerning the accuracy,
+			likely results, or reliability of the use of the materials on the
+			Internet web site where from data is retrieved or otherwise relating
+			to such materials or on any sites linked to this addon. Videos are
+			soruced from video-hosting websites that are having full rights to
+			remove such access to video if required.</disclaimer>
+		<platform>all</platform>
+		<license>GNU GPL v3</license>
+	</extension>
+</addon>
+
+<addon id="plugin.video.tvondesizonex" name="TV on DESI ZONE"
+	version="1.8.0" provider-name="AJ">
+	<requires>
+		<import addon="xbmc.python" version="2.0" />
+		<import addon="script.module.simplejson" version="2.0.10" />
+		<import addon="script.module.beautifulsoup" version="3.2.0" />
+		<import addon="script.module.turtlex" version="1.7.3" />
+		<import addon="script.module.metahandler"/>
+	</requires>
+	<extension point="xbmc.python.pluginsource" library="TurtleMain.py">
+		<provides>video</provides>
+	</extension>
+	<extension point="xbmc.addon.metadata">
+		<summary>Watch Indian TV videos as seen on desirulez.net</summary>
+		<description>Watch Indian TV videos as seen on desirulez.net</description>
+		<disclaimer>This addon makes no warranties, expressed or implied, and
+			hereby disclaims and negates all other warranties, including without
+			limitation, implied warranties or conditions of merchantability,
+			fitness for a particular purpose, or non-infringement of intellectual
+			property or other violation of rights. Further, TV on DESI ZONE addon
+			does not warrant or make any representations concerning the accuracy,
+			likely results, or reliability of the use of the materials on the
+			Internet web site where from data is retrieved or otherwise relating
+			to such materials or on any sites linked to this addon. Videos are
+			soruced from video-hosting websites that are having full rights to
+			remove such access to video if required.</disclaimer>
+		<platform>all</platform>
+		<license>GNU GPL v3</license>
+	</extension>
+</addon>
+
+<addon id="repository.googlecode.apple-tv2-xbmc" name="aj addons" version="1.5.3" provider-name="ajay">
+	<extension point="xbmc.addon.repository" name="aj add-on repository">
+		<info compressed="false">http://apple-tv2-xbmc.googlecode.com/svn/trunk/addons/addons.xml</info>
+		<checksum>http://apple-tv2-xbmc.googlecode.com/svn/trunk/addons/addons.xml.md5</checksum>
+		<datadir zip="false">http://apple-tv2-xbmc.googlecode.com/svn/trunk/addons</datadir>
+	</extension>
+	<extension point="xbmc.addon.metadata">
+		<summary>Install video addons from http://apple-tv2-xbmc.googlecode.com</summary>
+		<description>Download and install video addons from aj repository. Enjoy India TV Shows</description>
+		<disclaimer>The video add-ons hosted by my XBMC add-ons repository(aj add-ons) makes no warranties, expressed or implied, and hereby disclaims and negates all other warranties, including without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights. Further, video add-ons don't warrant or make any representations concerning the accuracy, likely results, or reliability of the use of the materials on the Internet web site where from data is retrieved or otherwise relating to such materials or on any sites linked to this addon. Videos are streamed directly from video-hosting websites that are having full rights to remove such access to video if required.</disclaimer>
+		<platform>all</platform>
+	</extension>
+</addon>
+
 <addon id="script.module.turtlex" name="Turtle X" version="1.7.3"
 	provider-name="AJ">
 	<requires>
@@ -59,111 +164,6 @@
 			such access to video if required.</disclaimer>
 		<license>GNU GPL v3</license>
 		<platform>all</platform>
-	</extension>
-</addon>
-
-<addon id="repository.googlecode.apple-tv2-xbmc" name="aj addons" version="1.5.3" provider-name="ajay">
-	<extension point="xbmc.addon.repository" name="aj add-on repository">
-		<info compressed="false">http://apple-tv2-xbmc.googlecode.com/svn/trunk/addons/addons.xml</info>
-		<checksum>http://apple-tv2-xbmc.googlecode.com/svn/trunk/addons/addons.xml.md5</checksum>
-		<datadir zip="false">http://apple-tv2-xbmc.googlecode.com/svn/trunk/addons</datadir>
-	</extension>
-	<extension point="xbmc.addon.metadata">
-		<summary>Install video addons from http://apple-tv2-xbmc.googlecode.com</summary>
-		<description>Download and install video addons from aj repository. Enjoy India TV Shows</description>
-		<disclaimer>The video add-ons hosted by my XBMC add-ons repository(aj add-ons) makes no warranties, expressed or implied, and hereby disclaims and negates all other warranties, including without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights. Further, video add-ons don't warrant or make any representations concerning the accuracy, likely results, or reliability of the use of the materials on the Internet web site where from data is retrieved or otherwise relating to such materials or on any sites linked to this addon. Videos are streamed directly from video-hosting websites that are having full rights to remove such access to video if required.</disclaimer>
-		<platform>all</platform>
-	</extension>
-</addon>
-
-<addon id="plugin.video.tvondesizonex" name="TV on DESI ZONE"
-	version="1.8.0" provider-name="AJ">
-	<requires>
-		<import addon="xbmc.python" version="2.0" />
-		<import addon="script.module.simplejson" version="2.0.10" />
-		<import addon="script.module.beautifulsoup" version="3.2.0" />
-		<import addon="script.module.turtlex" version="1.7.3" />
-		<import addon="script.module.metahandler"/>
-	</requires>
-	<extension point="xbmc.python.pluginsource" library="TurtleMain.py">
-		<provides>video</provides>
-	</extension>
-	<extension point="xbmc.addon.metadata">
-		<summary>Watch Indian TV videos as seen on desirulez.net</summary>
-		<description>Watch Indian TV videos as seen on desirulez.net</description>
-		<disclaimer>This addon makes no warranties, expressed or implied, and
-			hereby disclaims and negates all other warranties, including without
-			limitation, implied warranties or conditions of merchantability,
-			fitness for a particular purpose, or non-infringement of intellectual
-			property or other violation of rights. Further, TV on DESI ZONE addon
-			does not warrant or make any representations concerning the accuracy,
-			likely results, or reliability of the use of the materials on the
-			Internet web site where from data is retrieved or otherwise relating
-			to such materials or on any sites linked to this addon. Videos are
-			soruced from video-hosting websites that are having full rights to
-			remove such access to video if required.</disclaimer>
-		<platform>all</platform>
-		<license>GNU GPL v3</license>
-	</extension>
-</addon>
-
-<addon id="plugin.playitx" name="PlayIt" version="0.0.2"
-	provider-name="AJ">
-	<requires>
-		<import addon="xbmc.python" version="2.1.0" />
-		<import addon="script.module.turtlex" />
-	</requires>
-	<extension point="xbmc.python.pluginsource" library="TurtleMain.py">
-		<provides>audio</provides>
-	</extension>
-	<extension point="xbmc.addon.metadata">
-		<summary>Play the video received from PlayIt service clients like Web Browser extensions</summary>
-		<description>PlayIt is capable of playing almost all type of videos from most of hosted video sources.</description>
-		<disclaimer>This addon makes no warranties, expressed or implied, and
-			hereby disclaims and negates all other warranties, including without
-			limitation, implied warranties or conditions of merchantability,
-			fitness for a particular purpose, or non-infringement of intellectual
-			property or other violation of rights. Further, PlayIt addon does not
-			warrant or make any representations concerning the accuracy, likely
-			results, or reliability of the use of the materials on the Internet
-			web site where from data is retrieved or otherwise relating to such
-			materials or on any sites linked to this addon. Videos are soruced
-			from video-hosting websites that are having full rights to remove
-			such access to video if required.</disclaimer>
-		<license>GNU GPL v3</license>
-		<platform>all</platform>
-	</extension>
-</addon>
-
-<addon id="plugin.video.filmibynaturex" name="Filmi BY NATURE"
-	version="2.4.6" provider-name="AJ">
-	<requires>
-		<import addon="xbmc.python" version="2.0" />
-		<import addon="script.module.simplejson" version="2.0.10" />
-		<import addon="script.module.beautifulsoup" version="3.2.0" />
-		<import addon="script.module.turtlex"  version="1.7.2" />
-		<import addon="script.module.metahandler" />
-		<import addon="script.module.requests" />
-	</requires>
-	<extension point="xbmc.python.pluginsource" library="TurtleMain.py">
-		<provides>video</provides>
-	</extension>
-	<extension point="xbmc.addon.metadata">
-		<summary>Watch Indian videos as seen on sominaltvfilms.com</summary>
-		<description>Watch videos as seen on sominaltvfilms.com</description>
-		<disclaimer>This addon makes no warranties, expressed or implied, and
-			hereby disclaims and negates all other warranties, including without
-			limitation, implied warranties or conditions of merchantability,
-			fitness for a particular purpose, or non-infringement of intellectual
-			property or other violation of rights. Further, FILMI by NATURE addon
-			does not warrant or make any representations concerning the accuracy,
-			likely results, or reliability of the use of the materials on the
-			Internet web site where from data is retrieved or otherwise relating
-			to such materials or on any sites linked to this addon. Videos are
-			soruced from video-hosting websites that are having full rights to
-			remove such access to video if required.</disclaimer>
-		<platform>all</platform>
-		<license>GNU GPL v3</license>
 	</extension>
 </addon>
 </addons>
